package menuprincipal.jeu.phasesJeu;

import menuprincipal.jeu.Jeu;

public class PhaseSelectionnerJoueurs extends PhaseJeu{

    public PhaseSelectionnerJoueurs(Jeu jeu_) {
        super(jeu_);
    }

    @Override
    public void prochaineAction() {
        jeu.determinerModeJeu();
        jeu.effectuerPhase(new PhasePlacerBateaux(jeu));
    }
}
